force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Situacao_Auditoria__c.field-meta.xml
<CustomField>
    <fullName>Situacao_Auditoria__c</fullName>
    <label>Situação Auditoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conforme</fullName>
            </value>
            <value>
                <fullName>Não Conforme</fullName>
            </value>
            <value>
                <fullName>Ok</fullName>
                <isActive>false</isActive>
                <label>Ok</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>