force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(ISPICKVAL(Status_do_Contrato__c, &quot;CONCLUÍDO&quot;),IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0155A000009yAJ7&amp;oid=00Di0000000JVhH&amp;lastMod=1541071584000&quot;, &quot;&quot;,15,15),

IF(ISPICKVAL(Status_do_Contrato__c, &quot;CANCELADO&quot;),IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0153100000815of&amp;oid=00Di0000000JVhH&amp;lastMod=1474642970000&quot;, &quot;&quot;,15,15),

IF(AND(Data_de_T_rmino_do_Contrato_2__c &gt; TODAY() +30,ISPICKVAL(Status_do_Contrato__c,&quot;CONTRATO VIGENTE&quot;)), IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0153100000815oV&amp;oid=00Di0000000JVhH&amp;lastMod=1476125905000&quot;,&quot;&quot;,15,15),

IF(ISPICKVAL(Status_do_Contrato__c,&quot;AGUARDANDO ACEITAÇÃO DA PROPOSTA&quot;),IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0155A000009yAwk&amp;oid=00Di0000000JVhH&amp;lastMod=1541590907000&quot;, &quot;&quot;,15,15),

IF(ISPICKVAL(Status_do_Contrato__c,&quot;ELABORAÇÃO DA PROPOSTA&quot;),IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0155A000009yAwu&amp;oid=00Di0000000JVhH&amp;lastMod=1541591387000&quot;,&quot;&quot;,15,15),

IF(ISPICKVAL(Status_do_Contrato__c,&quot;ELABORAÇÃO DO CONTRATO&quot;),IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0155A000009yMJZ&amp;oid=00Di0000000JVhH&amp;lastMod=1550257601000&quot;,&quot;&quot;,15,15),

IF(ISPICKVAL(Status_do_Contrato__c,&quot;CONCLUÍDO (COM PENDENCIAS)&quot;),IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0155A000009kBi4&amp;oid=00Di0000000JVhH&amp;lastMod=1567688747000&quot;,&quot;&quot;,15,15),

IMAGE(&quot;https://hospcom.my.site.com/servlet/servlet.ImageServer?id=0153100000815oa&amp;oid=00Di0000000JVhH&amp;lastMod=1474642985000&quot;,&quot;&quot;,15,15)

)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>