force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Status_da_Aprova_o__c.field-meta.xml
<CustomField>
    <fullName>Status_da_Aprova_o__c</fullName>
    <label>Status da Aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rascunho</fullName>
                <default>true</default>
                <label>Rascunho</label>
            </value>
            <value>
                <fullName>Aguardando Validação Financeira</fullName>
            </value>
            <value>
                <fullName>Aguardando Validação Jurídica</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>