force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Status_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Status_do_Contrato__c</fullName>
    <label>Status do Contrato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGUARDANDO ACEITAÇÃO DA PROPOSTA</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO ASSINATURA DO CONTRATO</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
            <value>
                <fullName>CONCLUÍDO</fullName>
            </value>
            <value>
                <fullName>CONCLUÍDO (COM PENDENCIAS)</fullName>
            </value>
            <value>
                <fullName>CONTRATO VIGENTE</fullName>
            </value>
            <value>
                <fullName>PERDIDO</fullName>
            </value>
            <value>
                <fullName>SEPARAÇÃO/ENTREGA</fullName>
            </value>
            <value>
                <fullName>EM CALIBRAÇÃO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO DOCUMENTAÇÕES ASSINADAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>