force-app/main/default/objects/Contrato_de_Servi_o__c/fields/StatusAssinatura__c.field-meta.xml
<CustomField>
    <fullName>StatusAssinatura__c</fullName>
    <formula>IF(idDocAutentique__c == null, &apos;Não enviado&apos;, IF(Fase__c == &apos;1&apos;, &apos;Assinatura do cliente&apos;, IF(Fase__c == &apos;2&apos;, &apos;Aprovação financeira&apos;, IF(Fase__c == &apos;3&apos;,  &apos;Assinatura do administrador&apos;, IF(Fase__c == &apos;null&apos;, &apos;Assinaturas finalizadas&apos;, &apos;&apos;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status da Assinatura</label>
    <type>Text</type>
</CustomField>