force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Subtipo__c.field-meta.xml
<CustomField>
    <fullName>Subtipo__c</fullName>
    <label>Subtipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Linha DEA</fullName>
            </value>
            <value>
                <fullName>Linha VETERINÁRIA</fullName>
            </value>
            <value>
                <fullName>Linha OPME</fullName>
            </value>
            <value>
                <fullName>Linha ULTRASSOM</fullName>
            </value>
            <value>
                <fullName>Linha PMLS</fullName>
            </value>
            <value>
                <fullName>Linha SURGICAL</fullName>
            </value>
            <value>
                <fullName>Linha VIAS AÉREAS DIFÍCEIS</fullName>
            </value>
            <value>
                <fullName>Geral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>