force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Tempo_aditivado_meses__c.field-meta.xml
<CustomField>
    <fullName>Tempo_aditivado_meses__c</fullName>
    <label>Tempo aditivado</label>
    <summarizedField>Aditivos_Contratuais__c.Dura_o_Adicional__c</summarizedField>
    <summaryFilterItems>
        <field>Aditivos_Contratuais__c.Status__c</field>
        <operation>equals</operation>
        <value>Aprovado</value>
    </summaryFilterItems>
    <summaryForeignKey>Aditivos_Contratuais__c.Contrato_de_Servi_o_Relacionado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>