force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Testemunha__c.field-meta.xml
<CustomField>
    <fullName>Testemunha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Testemunha</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Serviços (Testemunha)</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os2</relationshipName>
    <type>Lookup</type>
</CustomField>