force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Timbre__c.field-meta.xml
<CustomField>
    <fullName>Timbre__c</fullName>
    <label>Timbre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GDB</fullName>
            </value>
            <value>
                <fullName>HEALTH SOLUTION</fullName>
            </value>
            <value>
                <fullName>HOSPCOM</fullName>
            </value>
            <value>
                <fullName>ABC TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>