force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Tipo_de_Devolu_o__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Devolu_o__c</fullName>
    <label>Tipo de Devolução</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipos_de_envio</valueSetName>
    </valueSet>
</CustomField>