force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Tipo_de_registro__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_registro__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de registro*</label>
    <type>Text</type>
</CustomField>