force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Transfer_ncia_de_aditivo_de_envio__c.field-meta.xml
<CustomField>
    <fullName>Transfer_ncia_de_aditivo_de_envio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferência de aditivo de envio</label>
    <type>Checkbox</type>
</CustomField>