force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Transfer_ncia_de_envio_e_retorno__c.field-meta.xml
<CustomField>
    <fullName>Transfer_ncia_de_envio_e_retorno__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transferência de aditivo de retorno</label>
    <type>Checkbox</type>
</CustomField>