force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Ultimo_pedido_ativo__c.field-meta.xml
<CustomField>
    <fullName>Ultimo_pedido_ativo__c</fullName>
    <label>Último pedido ativo</label>
    <type>Date</type>
</CustomField>