force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Unidade_hospitalar__c.field-meta.xml
<CustomField>
    <fullName>Unidade_hospitalar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidade hospitalar</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos de Serviços (Unidade hospitalar)</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os6</relationshipName>
    <type>Lookup</type>
</CustomField>