force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Validade_da_Proposta_dias__c.field-meta.xml
<CustomField>
    <fullName>Validade_da_Proposta_dias__c</fullName>
    <label>Validade da Proposta (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>