force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Validade_do_Contrato_dias__c.field-meta.xml
<CustomField>
    <fullName>Validade_do_Contrato_dias__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Validade do Contrato (dias)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>