force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Validador2__c.field-meta.xml
<CustomField>
    <fullName>Validador2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Serviços (Validador 2)</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os5</relationshipName>
    <type>Lookup</type>
</CustomField>