force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Validador__c.field-meta.xml
<CustomField>
    <fullName>Validador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Validador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contratos de Serviços (Validador)</relationshipLabel>
    <relationshipName>Contratos_de_Servi_os4</relationshipName>
    <type>Lookup</type>
</CustomField>