force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_Adicionado_dos_Aditivos__c.field-meta.xml
<CustomField>
    <fullName>Valor_Adicionado_dos_Aditivos__c</fullName>
    <label>Valor Adicionado dos Aditivos</label>
    <summarizedField>Aditivos_Contratuais__c.Valor_Total_Adicional__c</summarizedField>
    <summaryFilterItems>
        <field>Aditivos_Contratuais__c.Status__c</field>
        <operation>equals</operation>
        <value>Aprovado</value>
    </summaryFilterItems>
    <summaryForeignKey>Aditivos_Contratuais__c.Contrato_de_Servi_o_Relacionado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>