force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_de_entrada__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_entrada__c</fullName>
    <label>Valor de entrada</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>