force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_dos_Aditivos__c.field-meta.xml
<CustomField>
    <fullName>Valor_dos_Aditivos__c</fullName>
    <formula>Valor_Adicionado_dos_Aditivos__c - Valor_Suprimido_dos_Aditivos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor dos Aditivos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>