force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_Final_do_2_Aditivo__c.field-meta.xml
<CustomField>
    <fullName>Valor_Final_do_2_Aditivo__c</fullName>
    <formula>IF(N_de_Aditivos__c &gt; 1,Valor_Final_do_1_Aditivo__c +  X2_Aditivo_Adi_o__c - X2_Aditivo_Supress_o__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Final do 2° Aditivo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>