force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_Global__c.field-meta.xml
<CustomField>
    <fullName>Valor_Global__c</fullName>
    <label>Valor Global</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>