force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_Periodico_do_Contrato_Atual__c.field-meta.xml
<CustomField>
    <fullName>Valor_Periodico_do_Contrato_Atual__c</fullName>
    <label>Valor Periódico do Contrato (Atual)</label>
    <summarizedField>Ativos_do_Contrato__c.Valor_Total_Mensal_Atual__c</summarizedField>
    <summaryFilterItems>
        <field>Ativos_do_Contrato__c.Equipamento_no_Cliente__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ativos_do_Contrato__c.Contrato_de_Servico__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>