force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_Total_da_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_da_Proposta__c</fullName>
    <formula>IF( Proposta_Contrato_Global__c == true,  Valor_Global__c,
Valor_Mensal_da_Proposta__c  *  Dura_o_do_Contrato_meses__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total da Proposta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>