force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Valor_Total_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_do_Contrato__c</fullName>
    <formula>IF( Proposta_Contrato_Global__c == false, Valor_Mensal_do_Contrato__c * Dura_o_do_Contrato_meses__c,  Valor_Global__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total do Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>