force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Vendedor_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Vendedor_do_Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor do Contrato</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contratos_de_Servi_os</relationshipName>
    <type>Lookup</type>
</CustomField>