force-app/main/default/objects/Contrato_de_Servi_o__c/fields/Visto__c.field-meta.xml
<CustomField>
    <fullName>Visto__c</fullName>
    <formula>IMAGE(&quot;https://hospcom--c.na49.content.force.com/servlet/servlet.ImageServer?id=0155A000009LFZB&amp;oid=00Di0000000JVhH&amp;lastMod=1617305639000&quot;, &quot;&quot;, 25, 25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visto</label>
    <type>Text</type>
</CustomField>