force-app/main/default/objects/Contrato_de_Servi_o__c/fields/X3_Aditivo_Adi_o__c.field-meta.xml
<CustomField>
    <fullName>X3_Aditivo_Adi_o__c</fullName>
    <label>3° Aditivo (Adição)</label>
    <summarizedField>Aditivos_Contratuais__c.Valor_Total_Adicional__c</summarizedField>
    <summaryFilterItems>
        <field>Aditivos_Contratuais__c.N_do_Aditivo__c</field>
        <operation>equals</operation>
        <value>3</value>
    </summaryFilterItems>
    <summaryForeignKey>Aditivos_Contratuais__c.Contrato_de_Servi_o_Relacionado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>