force-app/main/default/objects/Contrato_de_Servi_o__c/recordTypes/HOMECARE.recordType-meta.xml
<RecordType>
    <fullName>HOMECARE</fullName>
    <active>true</active>
    <label>HOMECARE</label>
</RecordType>