force-app/main/default/objects/Contrato_de_Servi_o__c/recordTypes/PROPOSTA_CONTRATO_DE_COMODATO.recordType-meta.xml
<RecordType>
    <fullName>PROPOSTA_CONTRATO_DE_COMODATO</fullName>
    <active>true</active>
    <label>PROPOSTA/CONTRATO DE COMODATO</label>
</RecordType>