force-app/main/default/objects/Contrato_de_Servi_o__c/recordTypes/PROPOSTA_CONTRATO_DE_LOCA_O.recordType-meta.xml
<RecordType>
    <fullName>PROPOSTA_CONTRATO_DE_LOCA_O</fullName>
    <active>true</active>
    <label>PROPOSTA/CONTRATO DE LOCAÇÃO</label>
</RecordType>