force-app/main/default/objects/Contrato_de_Servi_o__c/recordTypes/PROPOSTA_CONTRATO_DE_SERVI_OS.recordType-meta.xml
<RecordType>
    <fullName>PROPOSTA_CONTRATO_DE_SERVI_OS</fullName>
    <active>true</active>
    <label>PROPOSTA/CONTRATO DE SERVIÇOS</label>
</RecordType>