force-app/main/default/objects/Contrato_de_Servi_o__c/validationRules/Data_primeiro_faturamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Data_primeiro_faturamento</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status_do_Contrato__c),
TEXT(Status_do_Contrato__c) == &apos;CONTRATO VIGENTE&apos;,
Primeiro_faturamento__c == null
)</errorConditionFormula>
    <errorDisplayField>Primeiro_faturamento__c</errorDisplayField>
    <errorMessage>Preencha a data do primeiro faturamento.</errorMessage>
</ValidationRule>