force-app/main/default/objects/Contrato_de_Servi_o__c/listViews/Contratos_assinados.listView-meta.xml
<ListView>
    <fullName>Contratos_assinados</fullName>
    <columns>N_mero_da_Proposta_Contrato__c</columns>
    <columns>NAME</columns>
    <columns>Locat_rio_a__c</columns>
    <columns>Data_da_fase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fase__c</field>
        <operation>equals</operation>
        <value>null</value>
    </filters>
    <label>Contratos assinados</label>
</ListView>