force-app/main/default/objects/Contrato_de_Servi_o__c/listViews/Contratos_em_assinatura.listView-meta.xml
<ListView>
    <fullName>Contratos_em_assinatura</fullName>
    <columns>N_mero_da_Proposta_Contrato__c</columns>
    <columns>NAME</columns>
    <columns>Locat_rio_a__c</columns>
    <columns>StatusAssinatura__c</columns>
    <columns>Data_da_fase__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fase__c</field>
        <operation>notEqual</operation>
        <value>,null,Expirado,Cancelado,Recusado</value>
    </filters>
    <label>Contratos em assinatura</label>
</ListView>