force-app/main/default/objects/Contrato_de_Servi_o__c/listViews/Filtros.listView-meta.xml
<ListView>
    <fullName>Filtros</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>N_mero_da_Proposta_Contrato__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_do_Contrato__c</field>
        <operation>equals</operation>
        <value>CONTRATO VIGENTE</value>
    </filters>
    <label>Filtros</label>
</ListView>