force-app/main/default/objects/Contrato_de_Servi_o__c/listViews/Tudo_Menos_Cancelados.listView-meta.xml
<ListView>
    <fullName>Tudo_Menos_Cancelados</fullName>
    <columns>NAME</columns>
    <columns>N_mero_da_Proposta_Contrato__c</columns>
    <columns>Cliente__c</columns>
    <columns>CNPJ_CLIENTE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_do_Contrato__c</field>
        <operation>notEqual</operation>
        <value>CANCELADO,CONCLUÍDO</value>
    </filters>
    <label>Tudo Exceto (Cancelados e Concluídos)</label>
</ListView>